# ghostd

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/agents/: chat.rs
src/client/: chat.rs  completion.rs  mod.rs  types.rs
src/code_completion/: prompts.rs  prompts.txt
src/router/: mod.rs
src/server/: client.rs  manager.rs  mod.rs
src/websocket/: channel_to_ws.rs  messages.rs  mod.rs  server.rs  ws_to_channel.rs
