[package]
name = "ghostd"
version = "0.0.1"
edition = "2024"
description = "Local model daemon for ghostwrite.nvim."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AdamFrenzen/ghostd"
keywords = ["llm", "neovim", "ghostwrite", "daemon"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[dependencies]
